--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.error-box {
+  border: 1px solid red !important;
+}
+
+.success-box {
+  border: 1px solid green !important;
+}
